[project]
name = "pupil-heart-bpm"
version = "0.1.0"
description = "Detecting Your Heart Rate Using the Pupil Dialation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "bleak>=0.22.3",
    "matplotlib>=3.10.3",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.18.1",
    "tensorflow-io==0.23.1",
]
